fix text alignment carousel - change logo name file

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,18 @@
   justify-content: baseline;
   align-items: end;
 }
+
+.animation-fade-up {
+  animation: fade-up 1s ease-in-out;
+}
+
+@keyframes fade-up {
+  0% {
+    opacity: 0;
+    transform: translateY(30%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
